--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- LOAD WITHOUT CDN CACHING-->
-    <!--
     <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
-    -->
-    <title>Document</title>
+    <title>Jay's Test Web Site</title>
 </head>
 <body>
     Hey this is index.html
