--- a/html_files/index.html
+++ b/html_files/index.html
@@ -1,26 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- meta description tag (by Giraffe Academy) -->
+    <meta name="description" content="This is Jay's Website" />
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- LOAD WITHOUT CDN CACHING-->
-    <meta http-equiv='cache-control' content='no-cache'> 
-    <meta http-equiv='expires' content='0'> 
-    <meta http-equiv='pragma' content='no-cache'>
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="pragma" content="no-cache" />
     <!-- Bootstrap Library (CSS)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Jay's Test Web Site</title>
-    
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <title>Jay's Test Web Site :: Welcome</title>
+  </head>
+  <body style="background-color: aquamarine;">
+    <!-- GIRAFFE ACADEMY -->
+    <!-- TITLE HEADER -->
+    <h1>Hello World</h1>
+    <h4>Hello World</h4>
+    <!-- PARAGRAPH and BOLD, ITALIC, SMALL and BIG tags -->
+    <p>Lorem <big>ipsum</big>, dolor sit amet <b>consectetur</b></p>
+    <p>
+      Lorem ipsum, <small>dolor</small> sit amet <i>consectetur</i> adipisicing
+      <b><i>elit.</i></b> Sequi, omnis?
+    </p>
+    <!-- Create a linebreak -->
+    <br />
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, quia!</p>
+    <!-- Horizontal line -->
+    <hr />
+    <hr />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quo?
+    </p>
+    <!-- super/subscripts -->
+    <p>Chemical Formula for Water: H<sub>2</sub>O</p>
+    <p>10<sup>2</sup> = 100</p>
+
+
+    <!-- Style and Color -->
+    <h1 style="color: green">This is green H1. </h1>
+    <p style="color: blue">This is blue text. </p>
+    <p style="color: yellow; background-color: red;">This is yellow text on Red background. </p> 
+
     <header class="bg-primary p-2 text-center">
-        <h1 class="text-white">HTML by giraffe Academy</h1>
+      <h1 class="text-white">HTML by giraffe Academy</h1>
     </header>
 
 
     <!-- Bootstrap Library (JS bundle) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
