--- a/html_files/index.html
+++ b/html_files/index.html
@@ -19,7 +19,14 @@
     />
     <title>Jay's Test Web Site :: Welcome</title>
   </head>
-  <body style="background-color: aquamarine;">
+  <body style="background-color: aquamarine">
+    <!-- Button for going to Formatting ages Section and beyond -->
+    <a
+      class="btn btn-outline-primary"
+      href="GA_formatting_pages.html"
+      role="button"
+      >Page Formatting</a
+    >
     <!-- GIRAFFE ACADEMY -->
     <!-- TITLE HEADER -->
     <h1>Hello World</h1>
@@ -43,16 +50,16 @@
     <p>Chemical Formula for Water: H<sub>2</sub>O</p>
     <p>10<sup>2</sup> = 100</p>
 
-
     <!-- Style and Color -->
-    <h1 style="color: green">This is green H1. </h1>
-    <p style="color: blue">This is blue text. </p>
-    <p style="color: yellow; background-color: red;">This is yellow text on Red background. </p> 
+    <h1 style="color: green">This is green H1.</h1>
+    <p style="color: blue">This is blue text.</p>
+    <p style="color: yellow; background-color: red">
+      This is yellow text on Red background.
+    </p>
 
     <header class="bg-primary p-2 text-center">
       <h1 class="text-white">HTML by giraffe Academy</h1>
     </header>
-
 
     <!-- Bootstrap Library (JS bundle) -->
     <script
