--- a/html_files/index.html
+++ b/html_files/index.html
@@ -20,12 +20,19 @@
     <title>Jay's Test Web Site :: Welcome</title>
   </head>
   <body style="background-color: aquamarine">
-    <!-- Button for going to Formatting ages Section and beyond -->
+    <!-- Button for going to Formatting Pages Section and beyond -->
     <a
       class="btn btn-outline-primary"
       href="GA_formatting_pages.html"
       role="button"
       >Page Formatting</a
+    >
+    <!-- Button for going to Lists and beyond -->
+    <a
+      class="btn btn-outline-primary"
+      href="GA_lists_and_beyond.html"
+      role="button"
+      >Lists and beyond</a
     >
     <!-- GIRAFFE ACADEMY -->
     <!-- TITLE HEADER -->
