--- a/html_files/index.html
+++ b/html_files/index.html
@@ -23,14 +23,14 @@
     <!-- Button for going to Formatting Pages Section and beyond -->
     <a
       class="btn btn-outline-primary"
-      href="GA_formatting_pages.html"
+      href="../html_files/GA_formatting_pages.html"
       role="button"
       >Page Formatting</a
     >
     <!-- Button for going to Lists and beyond -->
     <a
       class="btn btn-outline-primary"
-      href="GA_lists_and_beyond.html"
+      href="../html_files/GA_lists_and_beyond.html"
       role="button"
       >Lists and beyond</a
     >
